--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint-autofix:css": "stylelint ./**/*.css ./**/*.scss ./**/*.vue --fix"
   },
   "dependencies": {
-    "axios": "0.18.0",
+    "axios": "0.19.0",
     "core-js": "2.6.5",
     "lodash": "4.17.11",
     "vue": "2.6.10",
@@ -25,7 +25,7 @@
     "@infermedica/stylelint-config": "1.0.0",
     "@vue/cli-plugin-babel": "3.7.0",
     "@vue/cli-plugin-eslint": "3.7.0",
-    "@vue/cli-service": "3.7.0",
+    "@vue/cli-service": "3.8.0",
     "babel-eslint": "10.0.1",
     "eslint": "5.16.0",
     "eslint-plugin-vue": "5.2.2",
@@ -35,7 +35,9 @@
     "vue-template-compiler": "2.6.10"
   },
   "babel": {
-    "presets": ["@vue/app"]
+    "presets": [
+      "@vue/app"
+    ]
   },
   "eslintConfig": {
     "root": true,
